<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameplayActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/primary_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="horizontal"
            android:weightSum="4"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/miss"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/original_surfer"
                android:gravity="start"
                android:text="@string/missed_label"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/missed_display"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/missed_display"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/original_surfer"
                android:gravity="start"
                android:text="@string/level"
                android:textAlignment="textStart"
                android:textColor="@color/accent"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/score"
                app:layout_constraintStart_toEndOf="@id/miss" />

            <TextView
                android:id="@+id/score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/original_surfer"
                android:gravity="end"
                android:text="@string/score_label"
                android:textAlignment="textEnd"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/score_display"
                app:layout_constraintStart_toEndOf="@id/missed_display"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/score_display"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/original_surfer"
                android:gravity="end"
                android:text="@string/level"
                android:textColor="@color/accent"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/score" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/timer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:orientation="horizontal"
        tools:ignore="RelativeOverlap">

        <Button
            android:id="@+id/go_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/original_surfer"
            android:onClick="goButtonClickHandler"
            android:text="@string/ready"
            android:textColor="@color/accent"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timer_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/original_surfer"
            android:gravity="center|end"
            android:text=":59"
            android:textColor="@color/accent"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/balloon_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/timer_layout"
        android:background="@drawable/balloon_field">

    </FrameLayout>

</RelativeLayout>